<resources>
    <string name="app_name">Async</string>
    <string name="title_activity_login">Sign in to amazecreationz</string>

    <!-- User Strings -->
    <string name="user_pref_key">USER_DATA</string>
    <string name="user_name">USER_NAME</string>
    <string name="user_email">USER_EMAIL</string>
    <string name="user_verified">USER_VERIFIED</string>
    <string name="user_photo_url">USER_PHOTO_URL</string>
    <string name="user_photo_file">USER_PHOTO.PNG</string>
    <string name="user_id">UID</string>
    <!-- User Strings -->

    <string name="message_code">MSG_CODE</string>
    <string name="user_not_verified_code">USER_NOT_VERIFIED</string>
    <string name="user_just_signup_code">USER_TO_BE_VERIFIED</string>
    <string name="user_not_verified_msg">Verify your email to continue.</string>
    <string name="check_verify">Check Verification</string>
    <string name="resend_verify">Resend Verification Mail</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_tab_1">Home</string>
    <string name="main_tab_2">Log</string>
    <string name="main_tab_3">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_dialog_msg">Signing in…</string>
    <string name="signup_dialog_msg">Signing Up…</string>
    <string name="check_dialog_msg">Checking…</string>
    <string name="send_dialog_msg">Sending…</string>
    <string name="action_new_user">New User? Sign Up</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="verify_failed">Failed to verify.</string>
    <string name="hello_home">Hey There! You get to see the overview here.</string>
    <string name="hello_log">All your history comes here!</string>
    <string name="hello_profile">Hey, %1$s! Your profile information will be displayed here.</string>


</resources>
