<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/logo_message"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:cropToPadding="false"
        android:paddingBottom="30dp"
        android:paddingTop="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/msg_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_message"
        android:padding="15sp"
        android:text="@string/user_not_verified_msg"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/check_verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg_text"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/check_verify"
        android:theme="@style/RaisedPrimaryButton" />

    <Button
        android:id="@+id/resend_verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_verify_btn"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/resend_verify"
        android:theme="@style/RaisedWarningButton" />
</RelativeLayout>
